_deploy/istio-external-gateway.yml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: istio-external-gateway
  namespace: gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - external.k8s
      port:
        name: http
        number: 80
        protocol: http
