_deploy/istio-internal-gateway.yml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: istio-internal-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - internal.k8s
      port:
        name: http
        number: 80
        protocol: http
